Assets/CSS/test.css
@font-face {
font-family: "test";
src: url("../Fonts/studio-gothic.gothictrial-extraboldital-webfont.woff");
}


body {
	margin: 0px;
	height: 100%;
	background-color: #101015;
	overflow: hidden;
	z-index:3;
}
#main {
	height:100%;
	width: 95%;
}

#snow {
	z-index:11;
	position: fixed;
}
#main {
	font-family: 'test';
	font-weight:normal;
	font-style:normal;
}

#SideNav {
	background-color: #101015;
	width: 5%;
	height: 100%;
	float: left;
	margin: 0%;
}

#SideNav a {

}
#SideNav a img{
	height: 5%;
	width:40%;
}

section {
	font-size: 4rem;
	color: white;
	padding-top: 15%;
	text-align: center;

}


nav  {
	padding-top: 5%;
	display: flex;
	justify-content: center;
}

nav a {
   
    color: white;
    text-align: center;
    padding: 14px 16px;
    text-decoration: none;
	margin:5%;
	 z-index: 11;
}

nav a:hover {
    opacity: 50%;
}
.clear
{
	clear: both;
}


::-webkit-scrollbar { 
    display: none; 
}

.snowflake {
	position: absolute;
	display: block;
	position: absolute;
	-webkit-border-radius: 50%;
	-moz-border-radius: 50%;
	border-radius: 50%;
	-webkit-transform: translateZ(0);
	-moz-transform: translateZ(0);
	-ms-transform: translateZ(0);
	-o-transform: translateZ(0);
	transform: translateZ(0);
	-webkit-user-select: none;
	-moz-user-select: none;
	user-select: none;
	background-image: -webkit-radial-gradient(
		center,
		circle farthest-corner,
		rgba(255, 255, 255, 1) 40%,
		rgba(255, 255, 255, 0) 100%
	);
	background-image: -moz-radial-gradient(
		center,
		circle farthest-corner,
		rgba(255, 255, 255, 1) 40%,
		rgba(255, 255, 255, 0) 100%
	);
	background-image: -ms-radial-gradient(
		center,
		circle farthest-corner,
		rgba(255, 255, 255, 1) 40%,
		rgba(255, 255, 255, 0) 100%
	);
	background-image: radial-gradient(
		center,
		circle farthest-corner,
		rgba(255, 255, 255, 1) 40%,
		rgba(255, 255, 255, 0) 100%
	);
}

